Add ansible to deploy. Add viper to read config from yaml file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 /cmd/telegram/telegram
-/telegram.conf
+/deploy/config/telegram.conf
 .idea
 /coverage.out
 /test/acceptance/assets/
+/deploy/password
+/config.yaml
+/deploy/assets/
