--- a/deploy/deploy.yml
+++ b/deploy/deploy.yml
@@ -1,37 +1,37 @@
 - hosts: raspberry_telegram
   tasks:
-    - name: Build binary
-      local_action:
-        module: make
-        chdir: ..
-        target: build
-    - name: Stopping supervisor
-      shell: supervisorctl stop "{{ service_name}}"
+    - name: Stopping service if service exists
+      with_first_found:
+        - files:
+            - /etc/systemd/system/telegram.service
+          skip: true
+      shell: systemctl stop "{{ service_name }}"
       become: yes
     - name: Copy old binary file
       shell: cp {{ binary_path }} {{ binary_path }}_old
     - name: Upload binary file
       copy:
-        src: assets/telegram
+        src: assets/server
         dest: "{{ binary_path }}"
         mode: 0750
         force: yes
-    - name: Upload config file
-      template:
-        src: config/config.yml.j2
-        dest: "{{ home }}/config_telegram.yml"
-        mode: 0750
-        force: yes
-    - name: Upload supervisor conf file
+    - name: Updload conf file
       template:
         src: config/telegram.conf
-        dest: /etc/supervisor/conf.d/telegram.conf
-        mode: 0750
+        dest: /etc/systemd/system/telegram.conf
+        mode: 0644
         force: yes
       become: yes
-    - name: Reload config supervisor
-      shell: supervisorctl reload
+    - name: Upload service file
+      template:
+        src: config/telegram.service
+        dest: /etc/systemd/system/telegram.service
+        mode: 0644
+        force: yes
       become: yes
-    - name: Start supervisor
-      shell: supervisorctl start "{{ service_name}}"
+    - name: Start service
+      shell: systemctl start "{{ service_name}}"
+      become: yes
+    - name: Enable service on boot
+      shell: systemctl enable "{{ service_name}}"
       become: yes
