--- a/devops/ansible/deploy.yml
+++ b/devops/ansible/deploy.yml
@@ -7,11 +7,20 @@
           skip: true
       shell: systemctl stop "{{ service_name }}"
       become: yes
+    - name: Check that the binary file exists
+      stat:
+        path: "{{ binary_path }}"
+      register: stat_result
     - name: Copy old binary file
-      shell: cp {{ binary_path }} {{ binary_path }}_old
+      copy:
+        src: "{{ binary_path }}"
+        dest: "{{ binary_path }}_old"
+        remote_src: yes
+        force: yes
+      when: stat_result.stat.exists == true
     - name: Upload binary file
       copy:
-        src: assets/server
+        src: assets/telegram
         dest: "{{ binary_path }}"
         mode: 0750
         force: yes
@@ -29,9 +38,12 @@
         mode: 0644
         force: yes
       become: yes
-    - name: Start service
-      shell: systemctl start "{{ service_name}}"
+    - name: reload daemon service
+      shell: systemctl daemon-reload
       become: yes
     - name: Enable service on boot
       shell: systemctl enable "{{ service_name}}"
+      become: yes
+    - name: Start service
+      shell: systemctl restart "{{ service_name}}"
       become: yes
