--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.3"
-
 services:
   telegram:
     build:
@@ -11,7 +9,7 @@ services:
     volumes:
       - .:/app
     environment:
-      TELEGRAM_TOKEN: ${TELEGRAM_TOKEN:-:token}
+      TELEGRAM_TOKEN: ${TELEGRAM_TOKEN:-token}
       TELEGRAM_WS_URL: ${TELEGRAM_WS_URL:-http://water_system:8080}
       TELEGRAM_WS_TOKEN: ${TELEGRAM_WS_TOKEN:-WT7*P6Yn^2-Y*V*C-h&K6*b!@=HCzhd+}
 networks:
